# docs

./: .gitignore  README.md
jekyll/: _config.yml  index.md
jekyll/docs/: running-examples.md
jekyll/docs/authn-authz/: authn-authz.md
jekyll/docs/backends/: backends.md
jekyll/docs/contexts/: contexts.md
jekyll/docs/dependency-injection/: dependency-injection.md
jekyll/docs/getting-started/: getting-started.md  models.md  restful-apis.md  routing.md  using-callables.md
jekyll/docs/handlers/: advanced_search.md  callable.md  create.md  delete.md  get.md  handlers.md  health_check.md  list.md  mygrations.md  request_method_routing.md  restful_api.md  routing.md  simple_routing.md  simple_search.md  standard-configs.md  update.md  write.md
jekyll/docs/models/: models.md
jekyll/docs/overview/: .infrastructure-neutral.md.kate-swp  declarative-apis.md  declarative-programming.md  infrastructure-neutral.md  overview.md  reusable-business-logic.md  secrets-management.md  (+2 more)
python/: build.py  config.json  pyproject.toml
python/app/: __init__.py  build.py  prepare_doc_space.py
python/app/backends/: __init__.py  attribute_backend.py  class_backend.py  module_backend.py
python/app/columns/: __init__.py  any.py  attribute.py  attributes.py  base_classes.py  class_column.py  module.py  module_classes.py
python/app/models/: __init__.py  attribute.py  attribute_reference.py  class_model.py  class_reference.py  method.py  method_reference.py  module.py  module_reference.py
terraform/: cloudfront.tf  main.tf  route53.tf  s3.tf  terraform.tfvars  variables.tf
(+3 files in other folders)
