[project]
name = "docs-builder"
version = "0.1.0"
description = "Doc site builder for clearskies.info"
authors = [
    {name = "Conor Mancone",email = "cmancone@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
